[package]
name = "erldash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byte-unit = "4"
clap = { version = "3", features = ["derive"] }
crossterm = "0.23"
dirs = "4"
erl_dist = "0.5"
erl_rpc = "0.1"
futures = "0.3"
smol = "1"
tui = "0.17"
