[package]
name = "erldash"
version = "0.1.3"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple, terminal-based Erlang dashboard"
homepage = "https://github.com/sile/erldash"
repository = "https://github.com/sile/erldash"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
dirs = "5"
erl_dist = "0.6"
erl_rpc = "0.2"
futures = "0.3"
log = "0.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
simplelog = "0.12"
smol = "1"
tui = "0.19"
